# household-energy-meter

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  icebox.md  pyproject.toml
.github/workflows/: scraper.yml
migrations/: 001_initial_schema.sql  002_readings_and_alert_state.sql  003_delete_bootstrap_rows.sql  migrate.py
scraper/: api_client.py  appliances.py  charts.py  normalizer.py  scraper.py  storage.py  test_messages.py
scripts/: bootstrap_ids.py  probe_api.py
