[project]
name = "energy-monitor"
version = "1.0.0"
description = "Energy meter monitoring system — scrapes a prepaid electricity meter portal and notifies via Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.8.0",
    "psycopg2-binary>=2.9.0",
]

[tool.uv]
package = false
